tests/e2e/semantics/mutation/string_substring_end_error.error
Error: syntax error in story at line 2, column 17

2|    b = a.substring(end: "foo")
                      ^^^^^^^^^^

E0115: Mutation `substring` requires argument `end` to be of type `int`, not `string`
