tests/e2e/semantics/mutation/string_substring_end_error.story
a = ""
b = a.substring(end: "foo")
